--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,14 @@ footer{
     color: #333;
     font-weight: bold;
 }
+
+.ttmaster h3, h4{
+    color:#fff;
+    background-color: pink;
+    width: 50%;
+    padding: 25px;
+}
+
+.ttmaster{
+    color: #999;
+}
