--- a/css/style.css
+++ b/css/style.css
@@ -12,4 +12,11 @@ footer{
 
 .ttmaster{
     color: #999;
+}   
+.titulo h2{
+    color: #fff;
+    background-color: #036;
+    padding: 5px;
+    width: 50%;
+    font-size: 1.5em;
 }
